test use eclipse commit

--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
 	</repository>
   </repositories>
   <build>
-		<sourceDirectory>src</sourceDirectory>
-		<testSourceDirectory>test</testSourceDirectory>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
