--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
       <version>4.12</version>
       <!-- <scope>test</scope> -->
     </dependency>
+    <!-- 导入Mysql数据库链接jar包 -->
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.30</version>
+	</dependency>
     <!-- fast-el -->
 	<dependency>
 		<groupId>org.eweb4j</groupId>
